fix skill description box overlap

--- a/source/assets/app/components/skills-section/skills-section.scss
+++ b/source/assets/app/components/skills-section/skills-section.scss
@@ -17,7 +17,6 @@
   .fullstack-additional {
     float: right;
     width: 44%;
-    height: 500px;
   }
 
   @media screen and (max-width: 750px) {
